// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`list basic 1`] = `
[
  "{"operate":"blockOpen","type":"listOpen","chunk":"listOpen"}",
  "{"operate":"append","type":"listItemOpen","chunk":"-"}",
  "{"operate":"append","type":"strongOpen","chunk":"**"}",
  "{"operate":"append","type":"inlineCodeOpen","chunk":"\`"}",
  "{"operate":"append","type":"inlineCode","chunk":"v-for"}",
  "{"operate":"append","type":"inlineCodeClose","chunk":"\`"}",
  "{"operate":"append","type":"strong","chunk":" 指令"}",
  "{"operate":"append","type":"strongClose","chunk":"**"}",
  "{"operate":"append","type":"text","chunk":"："}",
  "{"operate":"append","type":"inlineCodeOpen","chunk":"\`"}",
  "{"operate":"append","type":"inlineCode","chunk":"v-"}",
  "{"operate":"append","type":"inlineCode","chunk":"for"}",
  "{"operate":"append","type":"inlineCodeClose","chunk":"\`"}",
  "{"operate":"append","type":"text","chunk":" 用于遍历数"}",
  "{"operate":"append","type":"text","chunk":"组 "}",
  "{"operate":"append","type":"inlineCodeOpen","chunk":"\`"}",
  "{"operate":"append","type":"inlineCode","chunk":"items"}",
  "{"operate":"append","type":"inlineCodeClose","chunk":"\`"}",
  "{"operate":"append","type":"text","chunk":"，"}",
  "{"operate":"append","type":"text","chunk":"并将每个元素渲染为一"}",
  "{"operate":"append","type":"text","chunk":"个 "}",
  "{"operate":"append","type":"inlineCodeOpen","chunk":"\`"}",
  "{"operate":"append","type":"inlineCode","chunk":"<li>"}",
  "{"operate":"append","type":"inlineCodeClose","chunk":"\`"}",
  "{"operate":"append","type":"text","chunk":" 标"}",
  "{"operate":"append","type":"text","chunk":"签。"}",
  "{"operate":"append","type":"listItemClose","chunk":"listItemClose"}",
  "{"operate":"append","type":"listItemOpen","chunk":"-"}",
  "{"operate":"append","type":"strongOpen","chunk":"**"}",
  "{"operate":"append","type":"strong","chunk":"模板"}",
  "{"operate":"append","type":"strongClose","chunk":"**"}",
  "{"operate":"append","type":"text","chunk":"：foo"}",
]
`;

exports[`list with text 1`] = `
[
  "{"operate":"blockOpen","type":"listOpen","chunk":"listOpen"}",
  "{"operate":"append","type":"listItemOpen","chunk":"-"}",
  "{"operate":"append","type":"strongOpen","chunk":"**"}",
  "{"operate":"append","type":"inlineCodeOpen","chunk":"\`"}",
  "{"operate":"append","type":"inlineCode","chunk":"v-for"}",
  "{"operate":"append","type":"inlineCodeClose","chunk":"\`"}",
  "{"operate":"append","type":"strong","chunk":" 指令"}",
  "{"operate":"append","type":"strongClose","chunk":"**"}",
  "{"operate":"append","type":"text","chunk":"："}",
  "{"operate":"append","type":"inlineCodeOpen","chunk":"\`"}",
  "{"operate":"append","type":"inlineCode","chunk":"v-"}",
  "{"operate":"append","type":"inlineCode","chunk":"for"}",
  "{"operate":"append","type":"inlineCodeClose","chunk":"\`"}",
  "{"operate":"append","type":"text","chunk":" 用于遍历数"}",
  "{"operate":"append","type":"text","chunk":"组 "}",
  "{"operate":"append","type":"inlineCodeOpen","chunk":"\`"}",
  "{"operate":"append","type":"inlineCode","chunk":"items"}",
  "{"operate":"append","type":"inlineCodeClose","chunk":"\`"}",
  "{"operate":"append","type":"text","chunk":"，"}",
  "{"operate":"append","type":"text","chunk":"并将每个元素渲染为一"}",
  "{"operate":"append","type":"text","chunk":"个 "}",
  "{"operate":"append","type":"inlineCodeOpen","chunk":"\`"}",
  "{"operate":"append","type":"inlineCode","chunk":"<li>"}",
  "{"operate":"append","type":"inlineCodeClose","chunk":"\`"}",
  "{"operate":"append","type":"text","chunk":" 标"}",
  "{"operate":"append","type":"text","chunk":"签。"}",
  "{"operate":"append","type":"listItemClose","chunk":"listItemClose"}",
  "{"operate":"append","type":"listItemOpen","chunk":"-"}",
  "{"operate":"append","type":"strongOpen","chunk":"**"}",
  "{"operate":"append","type":"strong","chunk":"模板"}",
  "{"operate":"append","type":"strongClose","chunk":"**"}",
  "{"operate":"append","type":"text","chunk":"：foo"}",
  "{"operate":"append","type":"listItemClose","chunk":"listItemClose"}",
  "{"operate":"append","type":"listClose","chunk":"listClose"}",
  "{"operate":"blockOpen","type":"text","chunk":"bar"}",
]
`;
